k8s/order-service/service-order.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-order
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
