k8s/order-service/ingress-order.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /api/order(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-order
                port:
                  number: 80
